--- a/style.css
+++ b/style.css
@@ -47,3 +47,72 @@ a:hover {
     box-shadow: none;
   }
 }
+footer {
+  text-align: center;
+  margin-top: 2em;
+  font-size: 0.8em;
+  color: #888;
+}
+
+.switch-bar {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  z-index: 99;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 52px;
+  height: 28px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  border-radius: 34px;
+  transition: 0.3s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 22px;
+  width: 22px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+input:checked + .slider {
+  background-color: #3876c2;
+}
+input:checked + .slider:before {
+  transform: translateX(24px);
+}
+body.dark {
+  background: #222831;
+  color: #e6e6e6;
+}
+
+body.dark .container {
+  background: #262c35;
+  color: #e6e6e6;
+}
+
+body.dark h2,
+body.dark a {
+  color: #a5c7ff;
+}
+body.dark footer {
+  color: #bbb;
+}
